--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -15,6 +15,7 @@ body {
   align-items: flex-end;
   justify-content: center;
   min-height: 100vh;
+  min-width: 100%;
   background-color: var(--dark-color);
   overflow: hidden;
   perspective: 1000px;
